--- a/style.css
+++ b/style.css
@@ -9,13 +9,31 @@ img{
     text-align: center;
 }
 main{
-    background-color: blueviolet;
+    background-color: gray;
+     text-align: center;
 }
-main{
+main p{
     text-align: center;
+    font-size: 20px;
     }
 
 footer{
-    background-color: aquamarine;
+    background-color: gray;
     text-align: center;
+}
+main{
+    background-color: gray;
+}
+header{
+    background-color: gray;
+}
+a herf{text-align: center;}
+
+main a {
+    text-decoration: none;
+    color: black;
+    border: 1px solid white;
+    border-radius:10px ;
+    background-color:orange;
+    padding: 5px;
 }
